# django_rest_frame_work

./: .forestadmin-schema.json  db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
client/public/: index.html
user_app/api/: serializers.py  urls.py  views.py
watchlist_app/: admin.py  models.py  views.py
watchlist_app/api/: pagination.py  permissions.py  serializers.py  throttling.py  urls.py  views.py
watchlist_app/migrations/: 0001_initial.py  0002_streamplatform_watchlist_delete_movies.py  0003_watchlist_platform.py  0004_review.py  0005_review_review_user.py  0006_watchlist_avg_ratings_watchlist_number_ratings.py
watchmate/: asgi.py  settings.py  urls.py  wsgi.py
